--- a/_assets/stylesheets/_article.scss
+++ b/_assets/stylesheets/_article.scss
@@ -181,17 +181,16 @@ article {
 
     pre {
         border: 0;
-        padding: 1.5em 3em;
-        margin:0 -3em 1.5em;
+        padding: 1em;
+        margin:0 -1em 1.5em;
         background: whitesmoke;
-        border: 0;
         border-radius: 2px;
         border-bottom:1px solid #eee;
         width:100%;
         font-size:0.8em;
         overflow-x: auto;
         display:block;
-        
+
         code {
             font-size:0.8em;
             border:0;
