--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -37,13 +37,9 @@
                 <img src="/images/{{ site.inc.logo }}" alt="Inc">
             </a>
             <a href="/" class="home">Blog</a>
-            {% if site.inc.product_link %}<a href="{{ site.inc.product_link }}">Product</a>{% endif %}
-            {% if site.inc.about_link %}<a href="{{ site.inc.about_link }}">About</a>{% endif %}
+            <a href="https://answers.coveo.com">Answers</a>
+            <a href="https://developers.coveo.com">Documentation</a>
         </nav>
-        {% if site.inc.tagline or site.inc.product_url %}<nav class="tagline">
-            {% if site.inc.tagline %}<span>{{ site.inc.tagline }}</span>{% endif %}
-            {% if site.inc.product_link %}<a href="{{ site.inc.product_link }}" class="btn btn-outline">Learn More</a>{% endif %}
-        </nav>{% endif %}
     </header>
 </section>
 
@@ -56,8 +52,8 @@
         <nav>
             <a href="{{ site.inc.url }}">{{ site.inc.company }}</a> &middot;
             <a href="/">Blog</a> &middot;
-            {% if site.inc.product_link %}<a href="{{ site.inc.product_link }}">Product</a> &middot; {% endif %}
-            {% if site.inc.about_link %}<a href="{{ site.inc.about_link }}">About</a>{% endif %}
+            <a href="https://answers.coveo.com">Answers</a>
+            <a href="https://developers.coveo.com">Documentation</a>
         </nav>
         
         <nav class="social">
@@ -71,7 +67,6 @@
                 <i class="icon icon-rss black"></i>
             </a>
         </nav>
-        <p>Incorporated theme by <a href="https://sendtoinc.com">Inc</a></p>
     </div>
 </footer>
 
