--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,7 +34,7 @@
     <header>
         <nav id="navigation">
             <a class="brand" href="/">
-                <img src="/images/{{ site.inc.logo }}" alt="Inc">
+                <img src="{{ site.baseurl }}/images/{{ site.inc.logo }}" alt="Inc">
             </a>
             <a href="/" class="home">Blog</a>
             <a href="https://answers.coveo.com">Answers</a>
@@ -63,7 +63,7 @@
             {% if site.inc.facebook %}
             <a href="http://facebook.com/{{ site.inc.facebook }}" title="Follow on Facebook" target="_blank"><i class="icon icon-facebook black"></i></a>
             {% endif %}    
-            <a href="/feed.xml" title="RSS Feed">
+            <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed">
                 <i class="icon icon-rss black"></i>
             </a>
         </nav>
