--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,8 +6,8 @@
     <title>{% if page.title %}{{ page.title }} &mdash; {{ site.inc.title }}{% else %}{{ site.inc.title }} &mdash; {{ site.inc.subtitle }}{% endif %}</title>
     {% if site.inc.google_font %}<link href="https://fonts.googleapis.com/css?family={{ site.inc.google_font }}" rel="stylesheet" type="text/css">{% endif %}
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css"/>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/images/{{ site.inc.logo }}"/>
+    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="{{ site.baseurl }}/images/{{ site.inc.logo }}"/>
     <link href="{{ site_url }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.inc.title }}" />
     <meta name="title" content="{% if page.title %}{{ page.title }} {% else %}{{ site.inc.title }}{% endif %}">
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
@@ -33,10 +33,10 @@
 <section class="site-nav">
     <header>
         <nav id="navigation">
-            <a class="brand" href="/">
+            <a class="brand" href="{{ site.baseurl }}">
                 <img src="{{ site.baseurl }}/images/{{ site.inc.logo }}" alt="Inc">
             </a>
-            <a href="/" class="home">Blog</a>
+            <a href="{{ site.baseurl }}" class="home">Blog</a>
             <a href="https://answers.coveo.com">Answers</a>
             <a href="https://developers.coveo.com">Documentation</a>
         </nav>
@@ -51,7 +51,7 @@
         
         <nav>
             <a href="{{ site.inc.url }}">{{ site.inc.company }}</a> &middot;
-            <a href="/">Blog</a> &middot;
+            <a href="{{ site.baseurl }}">Blog</a> &middot;
             <a href="https://answers.coveo.com">Answers</a>
             <a href="https://developers.coveo.com">Documentation</a>
         </nav>
