--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if page.title %}{{ page.title }} &mdash; {{ site.inc.title }}{% else %}{{ site.inc.title }} &mdash; {{ site.inc.subtitle }}{% endif %}</title>
     {% if site.inc.google_font %}<link href="https://fonts.googleapis.com/css?family={{ site.inc.google_font }}" rel="stylesheet" type="text/css">{% endif %}
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/main.css"/>
     <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/images/{{ site.inc.logo }}"/>
     <link href="{{ site_url }}/feed.xml" rel="alternate" type="application/rss+xml" title="{{ site.inc.title }}" />
@@ -29,19 +29,31 @@
     <meta property="og:site_name" content="{{ site.inc.title }}">     
 </head>
 <body>
-    
+
 <section class="site-nav">
     <header>
-        <nav id="navigation">
-            <a class="brand" href="{{ site.inc.url }}">
-                <img src="{{ site.baseurl }}/images/{{ site.inc.logo }}" alt="Inc">
-            </a>
-            <a href="{{ site.baseurl }}" class="home">Blog</a>
-            <a href="https://answers.coveo.com">Answers</a>
-            <a href="https://developers.coveo.com">Documentation</a>
-        </nav>
+        <div class="container">
+            <div id="logo">
+    		    <a href="/">
+    			    <img src="{{ site.baseurl }}/images/{{ site.inc.logo }}" title="back to home page" alt="Coveo Source Blog">
+    		    </a>
+    	    </div>
+            <nav id="navigation">
+                <div class="selectBox">
+                    <span class="selected">Blog</span>
+                    <span class="selectArrow"></span>
+                    <div class="selectOptions">
+                        <span class="selectOption" value="http://answers.coveo.com">Answers</span>
+                        <span class="selectOption" value="http://onlinehelp.coveo.com">Online Help</span>
+                        <span class="selectOption" value="http://api.developers.coveo.com">API Reference</span>
+                        <span class="selectOption" value="http://www.coveo.com">Coveo.com</span>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
 </section>
+</div>
 
 {{ content }}
 
