Adding Developers inside the menu

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -44,6 +44,7 @@
                     <span class="selectArrow"></span>
                     <div class="selectOptions">
                         <span class="selectOption" value="http://answers.coveo.com">Answers</span>
+                        <span class="selectOption" value="http://developers.coveo.com">Developers</span>
                         <span class="selectOption" value="http://onlinehelp.coveo.com">Online Help</span>
                         <span class="selectOption" value="http://api.developers.coveo.com">API Reference</span>
                         <span class="selectOption" value="http://www.coveo.com">Coveo.com</span>
