--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,7 +23,7 @@
     <meta property="og:image" content="{{ site.url }}/images/{{ site.inc.logo }}"/>   
     {% endif %}
     {% if page.excerpt %}
-    <meta property="og:description" content="{{ page.excerpt }}"/>
+    <meta property="og:description" content="{{ page.title }}"/>
     <meta name="description" content="{{ page.excerpt }}"/>
     {% endif %}
     <meta property="og:site_name" content="{{ site.inc.title }}">     
