--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@
     {% endif %}
     {% if page.excerpt %}
     <meta property="og:description" content="{{ page.title }}"/>
-    <meta name="description" content="{{ page.excerpt }}"/>
+    <meta name="description" content="{{ page.title }}"/>
     {% endif %}
     <meta property="og:site_name" content="{{ site.inc.title }}">     
 </head>
