Adding Karel's post (part 1) about relevancy
- Karel's picture
- images linked into the post;
- the post itself;
- a change in the layout to support authors without a twitter account

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,11 @@ layout: base
     <div class="container">
         <header>
             <div class="meta">
-                By <address><a rel="author" href="{{ page.author.link }}" title="{{ page.author.name }}" target="_blank">{{ page.author.name }}</a></address> &mdash;
+	        {% if page.author.twitter %}
+	        By <address><a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{{ page.author.name }}</a></address> &mdash;
+		{% else %}
+		By {{ page.author.name }} &mdash;
+		{% endif %}
                 <time pubdate datetime="{{ page.date | date: "%Y-%d-%B" }}" title="{{ page.date | date: "%B %d, %Y" }}">{{ page.date | date: "%B %d, %Y" }}</time>
             </div>
             <h1 class="title">{{ page.title }}</h1>
@@ -27,8 +31,12 @@ layout: base
 
         <footer>
             <address>
-               {% if page.author.image %}<img src="{{ site.baseurl }}/images/{{ page.author.image }}">{% endif %}
-                <p>Written by <strong><a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{{ page.author.name }}</a></strong><br>
+                {% if page.author.image %}<img src="{{ site.baseurl }}/images/{{ page.author.image }}">{% endif %}
+                {% if page.author.twitter %}
+	        <p>Written by <strong><a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{{ page.author.name }}</a></strong><br>
+		{% else %}
+		<p>Written by <strong>{{ page.author.name }}</strong><br>
+		{% endif %}
                 <span class="muted">{{ page.author.bio }}</span>
                 </p>
             </address>
