--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,8 @@ layout: base
     <div class="container">
         <header>
             <div class="meta">
-                By <address><a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{{ page.author.name }}</a></address> &mdash;
+                
+	            By {% if page.author.twitter %}<address><a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{% endif %}{{ page.author.name }}{% if page.author.twitter %}</a></address>{% endif %} &mdash;
                 <time pubdate datetime="{{ page.date | date: "%Y-%d-%B" }}" title="{{ page.date | date: "%B %d, %Y" }}">{{ page.date | date: "%B %d, %Y" }}</time>
             </div>
             <h1 class="title">{{ page.title }}</h1>
@@ -28,7 +29,7 @@ layout: base
         <footer>
             <address>
                {% if page.author.image %}<img src="{{ site.baseurl }}/images/{{ page.author.image }}">{% endif %}
-                <p>Written by <strong><a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{{ page.author.name }}</a></strong><br>
+                <p>Written by <strong>{% if page.author.twitter %}<a rel="author" href="https://twitter.com/{{ page.author.twitter }}" title="{{ page.author_name }}" target="_blank">{% endif %}{{ page.author.name }}{% if page.author.twitter %}</a>{% endif %}</strong><br>
                 <span class="muted">{{ page.author.bio }}</span>
                 </p>
             </address>
