--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -27,6 +27,10 @@
 {% if site.inc.analytics.google %}
   {% include _google-analytics.html %}
 {% endif %}
+{% if site.inc.analytics.coveo %}
+  {% include _coveo-analytics.html %}
+{% endif %}
+
 <script type="text/javascript" charset="utf-8">
 
 $(function() {
