--- a/_includes/_coveo-analytics.html
+++ b/_includes/_coveo-analytics.html
@@ -1,6 +1,6 @@
 <script>
 $(document).ready(function() {
-    var token = '{% site.inc.analytics.coveo.token %}';
+    var token = 'TODO_GSIMARD';
     var debugging = location.hash.contains("debug-coveo-analytics");
 
     var eventData = {
