--- a/_includes/_coveo-analytics.html
+++ b/_includes/_coveo-analytics.html
@@ -13,7 +13,7 @@ $(document).ready(function() {
 			customData: new Object()
 		};
         
-    var requestUrl = 'https://usageanalytics.coveo.com/rest/v9/analytics/custom'  + '?token='+eventData.token + "&user=anonymous" + "&customEvent=" + encodeURIComponent(JSON.stringify(eventData));
+    var requestUrl = 'https://usageanalytics.coveo.com/rest/v9/analytics/custom'  + '?access_token='+eventData.token + "&user=anonymous" + "&customEvent=" + encodeURIComponent(JSON.stringify(eventData));
     $.ajax({
 		  url: requestUrl,
 		  dataType: 'jsonp',
