--- a/_includes/_coveo-analytics.html
+++ b/_includes/_coveo-analytics.html
@@ -5,6 +5,8 @@ $(document).ready(function() {
     var data = {
         eventType: 'pageVisit',
         eventValue: location.toString(),
+        originLevel1: 'x',
+        originLevel2: 'y',
         language: navigator.language || navigator.userLanguage,
         customData: {}
         };
