--- a/_includes/_coveo-analytics.html
+++ b/_includes/_coveo-analytics.html
@@ -7,6 +7,7 @@ $(document).ready(function() {
         eventValue: location.toString(),
         originLevel1: 'x',
         originLevel2: 'y',
+        device: navigator.userAgent,
         language: navigator.language || navigator.userLanguage,
         customData: {}
         };
