--- a/_includes/_social.html
+++ b/_includes/_social.html
@@ -20,5 +20,10 @@
         <a href="http://news.ycombinator.com/submit" class="hn-share-button">Vote on HN</a>
     </div>
     {% endif %}
+    {% if site.inc.sharing.foursquare %}
+    <div>
+        <a href="https://foursquare.com/intent/venue.html" class="fourSq-widget" >Save to Foursquare</a>
+    </div>
+    {% endif %}
 </div>
 {% endif %}
