search box and refactoring of search code
- added a search box in base and search templates;
- moved search related code in an include file.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,9 @@
     <meta property="og:description" content="{{ page.title }}"/>
     <meta name="description" content="{{ page.title }}"/>
     {% endif %}
-    <meta property="og:site_name" content="{{ site.inc.title }}">     
+    <meta property="og:site_name" content="{{ site.inc.title }}">
+    <link rel="stylesheet" href="/css/CoveoFullSearch.css" />
+    {% include _search.html %}
 </head>
 <body>
 
@@ -53,6 +55,7 @@
                     </div>
                 </div>
             </nav>
+            <div id="searchBox" class="CoveoSearchBox" data-activate-omnibox="true"></div>
         </div>
     </header>
 </section>
