--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -64,6 +64,7 @@
 <article class="container">
 
 <div id="search" class="CoveoSearchInterface" data-enable-history="true">
+    <span class="CoveoAnalytics" data-search-hub="Blog" data-token="api_key_16aa3ce3-d77a-4c25-97a2-18be59347d9e" data-user="coveokmua@coveo.com" data-send-to-cloud="true" />
 
     <div class="coveo-tab-section">
         <a class="CoveoTab"
