--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -63,8 +63,7 @@
 
 <article class="container">
 
-
-    <span class="CoveoAnalytics" data-search-hub="Blog" data-token="api_key_16aa3ce3-d77a-4c25-97a2-18be59347d9e" data-user="coveokmua@coveo.com" data-send-to-cloud="true" />
+    <span class="CoveoAnalytics" data-search-hub="Blog" data-token="16aa3ce3-d77a-4c25-97a2-18be59347d9e" data-user="coveokmua@coveo.com" />
 
     <div class="coveo-tab-section">
         <a class="CoveoTab"
