--- a/_includes/_search.html
+++ b/_includes/_search.html
@@ -9,10 +9,12 @@
       if(document.location.pathname == "/") {
         $('#searchBox').coveo('initSearchBox', '/search');
       } else if (document.location.pathname == "/search/" ) {
+        var mySearchBox = $("#searchBox");
         var myValueCaption = {  "Developers.coveo.com.public" : "Developers",
                                 "answers" : "Answers",
                                 "BlogTech" : "Technical Blog"};
         $("#search").coveo("init", {
+            externalComponents : [mySearchBox],
             Facet : {
                 valueCaption : myValueCaption
             }
