--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="/css/CoveoFullSearch.css" />
     {% include _search.html %}
 </head>
-<body id="search" class="CoveoSearchInterface" data-enable-history="true">
+<body>
 
 <section class="site-nav">
     <header>
@@ -63,7 +63,9 @@
 
 <article class="container">
 
-    <span class="CoveoAnalytics" data-search-hub="Blog" data-token="16aa3ce3-d77a-4c25-97a2-18be59347d9e" data-user="coveokmua@coveo.com" />
+<div id="search" class="CoveoSearchInterface" data-enable-history="true">
+
+    <span class="CoveoAnalytics" data-search-hub="Blog" data-token="api_key_16aa3ce3-d77a-4c25-97a2-18be59347d9e" data-user="coveokmua@coveo.com" data-send-to-cloud="true" />
 
     <div class="coveo-tab-section">
         <a class="CoveoTab"
@@ -157,6 +159,8 @@
     </div>
 
 <div style="clear:both;"></div>
+
+</div>
 
 </article>
 
