Wrapping search in a div

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="/css/CoveoFullSearch.css" />
     {% include _search.html %}
 </head>
-<body id="search" class="CoveoSearchInterface" data-enable-history="true">
+<body>
 
 <section class="site-nav">
     <header>
@@ -62,6 +62,8 @@
 </div>
 
 <article class="container">
+
+<div id="search" class="CoveoSearchInterface" data-enable-history="true">
 
     <span class="CoveoAnalytics" data-search-hub="Blog" data-token="16aa3ce3-d77a-4c25-97a2-18be59347d9e" data-user="coveokmua@coveo.com" />
 
@@ -157,6 +159,8 @@
     </div>
 
 <div style="clear:both;"></div>
+
+</div>
 
 </article>
 
