--- a/css/main.css
+++ b/css/main.css
@@ -3168,8 +3168,8 @@ span.selectOption:hover {
     padding: 5px 0 0 0;
 }
 
-#searchBox {
+#navigation #searchBox {
      float: right;
      margin: 20px 0 0 0;
-     font-size : 15px !important;
+     font-size : 15px;
 }
