--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -43,17 +43,18 @@
     		    </a>
     	    </div>
             <nav id="navigation">
-                <div class="selectBox">
-                    <span class="selected">Blog</span>
-                    <span class="selectArrow"></span>
-                    <div class="selectOptions">
-                        <span class="selectOption" value="http://answers.coveo.com">Answers</span>
-                        <span class="selectOption" value="http://developers.coveo.com">Developers</span>
-                        <span class="selectOption" value="http://onlinehelp.coveo.com">Online Help</span>
-                        <span class="selectOption" value="http://api.developers.coveo.com">API Reference</span>
-                        <span class="selectOption" value="http://www.coveo.com">Coveo.com</span>
-                    </div>
-                </div>
+                <ul>
+                  <li>
+                    Blog
+                    <ul>
+                            <li><a href="http://answers.coveo.com">Answers</a></li>
+                            <li><a href="http://developers.coveo.com">Developers</a></li>
+                            <li><a href="http://onlinehelp.coveo.com">Online Help</a></li>
+                            <li><a href="http://api.developers.coveo.com">API Reference</a></li>
+                            <li><a href="http://www.coveo.com">Coveo.com</a></li>
+                    </ul>
+                  </li>
+                </ul>
             </nav>
             <div id="searchBox" class="CoveoSearchBox" data-activate-omnibox="true"></div>
         </div>
