--- a/css/main.css
+++ b/css/main.css
@@ -3082,79 +3082,6 @@ article .full.zoomable img.zoom {
 
 
 /* header navigation */
-div.selectBox {
-    position:relative;
-    display:inline-block;
-    cursor:default;
-    text-align:left;
-    line-height:35px;
-    clear:both;
-    color:#333333;
-	font-family: 'Proxima Nova', sans-serif;
-	font-size: 18px;
-	border-top: 2px solid white;
-	cursor: pointer;
-}
-
-div.selectBox.active {
-	box-shadow: 0px 3px 6px rgba(0,0,0,0.25);
-}
-
-span.selected {
-    width:150px;
-    text-indent:10px;
-    border-right:none;
-    background:#f7f7f7;
-    overflow:hidden;
-}
-
-span.selectArrow {
-    width:30px;
-    text-align:center;
-    font-size:20px;
-    background : url('/images/fleche_noir.png') no-repeat 50% 50%;
-    background-color: #f7f7f7;
-    cursor:pointer;
-}
-
-span.selectArrow.active {
-    background : url('/images/fleche_noir_reverse.png') no-repeat 50% 50%;
-    background-color: #f7f7f7;
-}
- 
-span.selectArrow,span.selected {
-    position:relative;
-    float:left;
-    height:33px;
-    z-index:1;
-}
-
-div.selectOptions {
-    position:absolute;
-    top:28px;
-    left:0;
-    width:180px;
-    overflow:hidden;
-    background:#ffffff;
-    padding-top:5px;
-    display:none;
-    box-shadow: 0px 3px 6px rgba(0,0,0,0.25);
-    z-index: 99;
-}
-     
-span.selectOption {
-	color : #666666;
-    display:block;
-    line-height:20px;
-    padding:5px 10px;
-    cursor: pointer;
-}
- 
-span.selectOption:hover {
-	color: #333333;
-    background:#e2e2e2;         
-}  
-
 
 .site-nav #logo img {
     height: 40px;
@@ -3175,4 +3102,68 @@ span.selectOption:hover {
 
 #searchBox .CoveoQueryBox {
      font-size : 15px;
+}
+
+#navigation ul a {
+  text-decoration:none;
+  color: #333333;
+  font: 18px 'Proxima Nova', sans-serif;
+  display: block;
+
+}
+
+#navigation ul {
+  text-align: left;
+  display: inline;
+  margin: 0;
+  padding: 15px 4px 17px 0;
+  list-style: none;
+  
+}
+#navigation ul li {
+  font: 18px 'Proxima Nova', sans-serif;
+  display: inline-block;
+  margin-right: -4px;
+  position: relative;
+  padding: 6px 12px;
+  background: #f7f7f7 url('http://source.coveo.com/images/fleche_noir.png') no-repeat 90% 50%;
+  cursor: pointer;
+  width: 180px;
+
+
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+    box-shadow: 0px 3px 6px rgba(0,0,0,0.25);
+}
+#navigation ul li:hover {
+  background: #f7f7f7 url('http://source.coveo.com/images/fleche_noir_reverse.png') no-repeat 90% 50%;
+}
+#navigation ul li ul {
+  padding: 0;
+  position: absolute;
+  top: 34px;
+  left: 0;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+#navigation ul li ul li { 
+  background: #fff; 
+  display: block; 
+  color: #333333;
+
+}
+#navigation ul li ul li:hover { background: rgb(226,226,226); }
+#navigation ul li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
 }
