Cleaned header, search and new post
- Removed roundness from search box;
- Removed shadows from menu;
- No need for a search layout, using the base layout instead;
- Removed facet renaming from JavaScript since it was not used;
- New post about integrating search into Jekyll.

--- a/_includes/_search.html
+++ b/_includes/_search.html
@@ -10,14 +10,8 @@
         $('#searchBox').coveo('initSearchBox', '/search');
       } else if (document.location.pathname == "/search/" ) {
         var mySearchBox = $("#searchBox");
-        var myValueCaption = {  "Developers.coveo.com.public" : "Developers",
-                                "answers" : "Answers",
-                                "BlogTech" : "Technical Blog"};
         $("#search").coveo("init", {
-            externalComponents : [mySearchBox],
-            Facet : {
-                valueCaption : myValueCaption
-            }
+            externalComponents : [mySearchBox]
         })        
       }
     });
