--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -44,14 +44,14 @@
     	    </div>
             <nav id="navigation">
                 <ul>
-                  <li>
+                  <li class="CurrentSite">
                     Blog
                     <ul>
                             <li><a href="http://answers.coveo.com">Answers</a></li>
                             <li><a href="http://developers.coveo.com">Developers</a></li>
                             <li><a href="http://onlinehelp.coveo.com">Online Help</a></li>
                             <li><a href="http://api.developers.coveo.com">API Reference</a></li>
-                            <li><a href="http://www.coveo.com">Coveo.com</a></li>
+                            <li class="LastMenuEntry"><a href="http://www.coveo.com">Coveo.com</a></li>
                     </ul>
                   </li>
                 </ul>
