--- a/css/main.css
+++ b/css/main.css
@@ -3088,6 +3088,11 @@ article .full.zoomable img.zoom {
 #searchBox {
      float: right;
      margin: 20px 0 0 0;
+     border-radius: 0;
+}
+
+.CoveoSearchButton, .CoveoQueryBox {
+     border-radius: 0 !important;  
 }
 
 #searchBox .CoveoQueryBox {
@@ -3119,15 +3124,22 @@ article .full.zoomable img.zoom {
   background: #f7f7f7 url('http://source.coveo.com/images/fleche_noir.png') no-repeat 90% 50%;
   cursor: pointer;
   width: 180px;
-
-
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   -ms-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
-    box-shadow: 0px 3px 6px rgba(0,0,0,0.25);
+
 }
+
+.CurrentSite {
+    border: 1px solid #cdcdcd; 
+}
+
+.LastMenuEntry {
+    border-bottom: 1px solid #cdcdcd; 
+}
+
 #navigation ul li:hover {
   background: #f7f7f7 url('http://source.coveo.com/images/fleche_noir_reverse.png') no-repeat 90% 50%;
 }
@@ -3135,7 +3147,7 @@ article .full.zoomable img.zoom {
   padding: 0;
   position: absolute;
   top: 34px;
-  left: 0;
+  left: -1px;
   display: none;
   opacity: 0;
   visibility: hidden;
@@ -3149,7 +3161,8 @@ article .full.zoomable img.zoom {
   background: #fff; 
   display: block; 
   color: #333333;
-
+  border-left: 1px solid #cdcdcd;
+  border-right: 1px solid #cdcdcd;
 }
 #navigation ul li ul li:hover { background: rgb(226,226,226); }
 #navigation ul li:hover ul {
