Auto focus : false

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -56,7 +56,7 @@
                   </li>
                 </ul>
             </nav>
-            <div id="searchBox" class="CoveoSearchBox" data-activate-omnibox="true"></div>
+            <div id="searchBox" class="CoveoSearchBox" data-activate-omnibox="true" data-auto-focus="false"></div>
         </div>
     </header>
 </section>
