--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -52,7 +52,7 @@
                       <li><a href="http://answers.coveo.com"><img class="coveo-icon" src="https://s3.amazonaws.com/coveostatic/Answers.png">Answers</a></li>
                       <li><a href="http://onlinehelp.coveo.com"><img class="coveo-icon" src="https://s3.amazonaws.com/coveostatic/OnlineHelp.png">Online Help</a></li>
                       <li><a href="http://api.developers.coveo.com"><img class="coveo-icon" src="https://s3.amazonaws.com/coveostatic/API.png">API Reference</a></li>
-                      <li class="LastMenuEntry"><a href="http://www.coveo.com"><img class="coveo-icon" src="https://s3.amazonaws.com/coveostatic/CoveoWebsite.png">Coveo Website</a><a href="http://www.coveo.com">Coveo.com</a></li>
+                      <li class="LastMenuEntry"><a href="http://www.coveo.com"><img class="coveo-icon" src="https://s3.amazonaws.com/coveostatic/CoveoWebsite.png">Coveo Website</a></li>
                     </ul>
                   </li>
                 </ul>
