--- a/css/main.css
+++ b/css/main.css
@@ -2381,22 +2381,17 @@ a:hover {
     display: inline-block
 }
 
-.site-nav nav {
-    padding: 22px 30px;
-    float: left;
-    height: 80px;
-    display: table-cell
-}
-
 .site-nav #navigation {
-    padding-right: 0;
-    padding-left: 10px;
+    padding: 0;
+    float: left;
+    display: table-cell
 }
 
 .site-nav #navigation a {
     border: 0;
     margin: 0 0.9em;
-    display: inline-block
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .site-nav #navigation a:hover {
@@ -3088,7 +3083,7 @@ article .full.zoomable img.zoom {
 /* header navigation */
 
 .site-nav #logo img {
-    height: 40px;
+    /*height: 40px;*/
     margin: -2px 10px 0 10px;
 }
 
@@ -3114,31 +3109,34 @@ article .full.zoomable img.zoom {
      font-size : 15px;
 }
 
-#navigation ul a {
-  text-decoration:none;
-  color: #333333;
-  font: 18px 'Proxima Nova', sans-serif;
-  display: block;
-
-}
-
 #navigation ul {
-  text-align: left;
-  display: inline;
-  margin: 0;
-  padding: 15px 4px 17px 0;
-  list-style: none;
-
+    margin: 0;
+    padding: 27px 10px 0 10px;
 }
+
+#navigation ul a {
+    text-decoration:none;
+    color: #333333;
+    display: block;
+    padding-left: 21px;
+}
+
 #navigation ul li {
-  font: 18px 'Proxima Nova', sans-serif;
-  display: inline-block;
-  margin-right: -4px;
-  position: relative;
-  padding: 6px 12px;
-  background: #f7f7f7 url('http://source.coveo.com/images/fleche_noir.png') no-repeat 90% 50%;
-  cursor: pointer;
-  width: 160px;
+    font: 14px 'Open Sans', sans-serif;
+    display: table-cell;
+    position: relative;
+    padding: 6px 12px;
+    background: #f7f7f7 url('http://source.coveo.com/images/fleche_noir.png') no-repeat 90% 50%;
+    cursor: pointer;
+    width: 160px;
+    height: 38px;
+    vertical-align: middle;
+}
+
+#navigation a img.coveo-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 .CurrentSite {
@@ -3156,20 +3154,16 @@ article .full.zoomable img.zoom {
 #navigation ul li ul {
   padding: 0;
   position: absolute;
-  top: 34px;
+  top: 37px;
   left: -1px;
   display: none;
   opacity: 0;
   visibility: hidden;
-  -webkit-transiton: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  -ms-transition: opacity 0.2s;
-  -o-transition: opacity 0.2s;
-  -transition: opacity 0.2s;
 }
+
 #navigation ul li ul li {
   background: #fff;
-  display: block;
+  display: table;
   color: #333333;
   border-left: 1px solid #cdcdcd;
   border-right: 1px solid #cdcdcd;
